--- a/src/main/resources/static/Mapa.html
+++ b/src/main/resources/static/Mapa.html
@@ -37,8 +37,21 @@
             </div>
         </div>
         <div class="card" style="width: 90%; margin: 2%; padding: 2%;">
-            <h3 class="text-primary" id="Mapa de juego"> Juego:  </h3>
-            <br>
+            <h5 class="text-primary" id="Mapa de juego"> Tablero:  </h5>
+            <div id = "cuerpobotonesmov">
+                <button onclick="" type='button' class='btn btn-primary' >
+                    Arriba
+                </button>
+                <button onclick="" type='button' class='btn btn-primary' >
+                    Abajo
+                </button>
+                <button onclick="" type='button' class='btn btn-primary' >
+                    Izquierda
+                </button>
+                <button onclick="" type='button' class='btn btn-primary' >
+                    Derecha
+                </button>
+            </div>
             <br>
             <canvas id="gameCanvas" width="400px" height="400px" style="border:1px solid #000000;"></canvas>
         </div>
