--- a/src/main/resources/static/Mapa.html
+++ b/src/main/resources/static/Mapa.html
@@ -39,16 +39,16 @@
         <div class="card" style="width: 90%; margin: 2%; padding: 2%;">
             <h5 class="text-primary" id="Mapa de juego"> Tablero:  </h5>
             <div id = "cuerpobotonesmov">
-                <button onclick="" type='button' class='btn btn-primary' >
-                    Arriba
-                </button>
-                <button onclick="" type='button' class='btn btn-primary' >
+                <button onclick="movimiento.arriba()" type='button' class='btn btn-primary' >
                     Abajo
                 </button>
-                <button onclick="" type='button' class='btn btn-primary' >
+                <button onclick="movimiento.abajo()" type='button' class='btn btn-primary' >
+                    Arriba
+                </button>
+                <button onclick="movimiento.izquierda()" type='button' class='btn btn-primary' >
                     Izquierda
                 </button>
-                <button onclick="" type='button' class='btn btn-primary' >
+                <button onclick="movimiento.derecha()" type='button' class='btn btn-primary' >
                     Derecha
                 </button>
             </div>
@@ -61,5 +61,6 @@
 
 <script src="js/Creacion-mapa-Juego.js"></script>
 <script src="js/Monstruos.js"></script>
+<script src="js/Jugador.js"></script>
 </body>
 </html>
