--- a/src/main/resources/static/Mapa.html
+++ b/src/main/resources/static/Mapa.html
@@ -2,15 +2,18 @@
 <html lang="en">
 <head>
     <head>
-        <title>Blueprints</title>
+        <title>Adventure Map</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"/>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="/webjars/jquery/jquery.min.js"></script>
+        <script src="/webjars/sockjs-client/sockjs.min.js"></script>
+        <script src="/webjars/stomp-websocket/stomp.min.js"></script>
+        <script src="js/App.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     </head>
 </head>
-<body style="padding: 2%;">
+<body style="padding: 2%;" onload="app.init()">
 <main>
     <div style="margin-left: 2%;">
         <h1 class="text-danger"> Adventure Map </h1>
