--- a/src/main/resources/static/Mapa.html
+++ b/src/main/resources/static/Mapa.html
@@ -13,7 +13,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     </head>
 </head>
-<body style="padding: 2%;" onload="app.init()">
+<body style="padding: 2%;" onload="init()">
 <main>
     <div style="margin-left: 2%;">
         <h1 class="text-danger"> Adventure Map </h1>
