Dibujo de jugador en un solo tablero completado

--- a/src/main/resources/static/AdventureMap/Index.html
+++ b/src/main/resources/static/AdventureMap/Index.html
@@ -17,7 +17,7 @@
         <form>
             <h2>Ingresa nombre de Jugador</h2>
             <input id="playerName" type="text" placeholder="Nombre de tu Jugador">
-            <input type="button" value="Entrar" onclick="redirect()">
+            <input type="button" value="Entrar" onclick="redirect($('#playerName'))">
         </form>
     </body>
 </html>
