En vivo de jugador completo. Revisar error de pintado

--- a/src/main/resources/static/AdventureMap/Mapa.html
+++ b/src/main/resources/static/AdventureMap/Mapa.html
@@ -43,16 +43,16 @@
         <div class="card" style="width: 90%; margin: 2%; padding: 2%;">
             <h5 class="text-primary" id="Mapa de juego"> Tablero:  </h5>
             <div id = "cuerpobotonesmov">
-                <button onclick="movimiento.arriba()" type='button' class='btn btn-primary' >
+                <button onclick="newDirection('ABA');" type='button' class='btn btn-primary' >
                     Abajo
                 </button>
-                <button onclick="movimiento.abajo()" type='button' class='btn btn-primary' >
+                <button onclick="newDirection('ARR');" type='button' class='btn btn-primary' >
                     Arriba
                 </button>
-                <button onclick="movimiento.izquierda()" type='button' class='btn btn-primary' >
+                <button onclick="newDirection('IZQ');" type='button' class='btn btn-primary' >
                     Izquierda
                 </button>
-                <button onclick="movimiento.derecha()" type='button' class='btn btn-primary' >
+                <button onclick="newDirection('DER');" type='button' class='btn btn-primary' >
                     Derecha
                 </button>
             </div>
