agregando interfaz pelea

--- a/src/main/resources/static/AdventureMap/Mapa.html
+++ b/src/main/resources/static/AdventureMap/Mapa.html
@@ -22,8 +22,26 @@
     <hr>
     <div class="d-md-flex flex-md-row">
         <div class="card" style="width: 90%; margin: 2%; padding: 2%;">
-            <h3 class="text-primary" id="authorName">Top Scores</h3>
             <div class="card-body" >
+                <div id = "cuerpo pelea">
+                    <h1 id="totalPoints" style="font-weight: bold;">Pelear:</h1>
+                    <div>
+                        <img alt="" src="img/index.png" width="250" height="250">
+                        <p id="vidaE" style="font-weight: bold;"> VidaE: </p>
+                        <p id="ataqueE" style="font-weight: bold;"> ataqueE: </p>
+                        <p id="vidaP" style="font-weight: bold;"> VidaP: </p>
+                        <p id="ataqueP" style="font-weight: bold;"> ataqueP: </p>
+                    </div>
+                    <button onclick="" type='button' class='btn btn-primary' >
+                        Huir
+                    </button>
+                    <button onclick="" type='button' class='btn btn-primary' >
+                        Atacar
+                    </button>
+                </div>
+                <br>
+                <br>
+                <h3 class="text-primary" id="authorName">Top Scores</h3>
                 <table class="table table-bordered" id="tableBluePrints">
                     <thead>
                     <tr>
@@ -35,9 +53,6 @@
                     </tbody>
                 </table>
                 <hr>
-                <div>
-                    <p id="totalPoints" style="font-weight: bold;">Pelear</p>
-                </div>
             </div>
         </div>
         <div class="card" style="width: 90%; margin: 2%; padding: 2%;">
