--- a/src/main/resources/static/AdventureMap/Index.html
+++ b/src/main/resources/static/AdventureMap/Index.html
@@ -20,4 +20,5 @@
             <input type="button" value="Entrar" onclick="redirect($('#playerName'))">
         </form>
     </body>
+    <script src="js/App.js"></script>
 </html>
