--- a/src/main/resources/static/AdventureMap/Index.html
+++ b/src/main/resources/static/AdventureMap/Index.html
@@ -17,8 +17,7 @@
         <form>
             <h2>Ingresa nombre de Jugador</h2>
             <input id="playerName" type="text" placeholder="Nombre de tu Jugador">
-            <input type="button" value="Entrar" onclick="redirect($('#playerName'))">
+            <input type="button" value="Entrar" onclick="redirect($('#playerName').val())">
         </form>
     </body>
-    <script src="js/App.js"></script>
 </html>
