--- a/src/main/resources/static/AdventureMap/Mapa.html
+++ b/src/main/resources/static/AdventureMap/Mapa.html
@@ -78,9 +78,10 @@
 </main>
 
 
-<script src="js/Creacion-mapa-Juego.js"></script>
-<script src="js/Jugador.js"></script>
-<script src="js/Monstruos.js"></script>
+<script defer src="js/Creacion-mapa-Juego.js"></script>
+<!-- <script src="js/Jugador.js"></script> -->
+<script defer src="js/Monstruos.js" ></script>
+<script defer src="js/Jugador.js"></script>
 
 </body>
 </html>
