arreglando imagen div pelea

--- a/src/main/resources/static/AdventureMap/Mapa.html
+++ b/src/main/resources/static/AdventureMap/Mapa.html
@@ -26,7 +26,7 @@
                 <div id = "cuerpo pelea">
                     <h1 id="totalPoints" style="font-weight: bold;">Pelear:</h1>
                     <div>
-                        <img alt="" src="img/index.png" width="250" height="250">
+                        <img alt="" src="img/index2.png" width="250" height="250">
                         <p id="vidaE" style="font-weight: bold;"> VidaE: </p>
                         <p id="ataqueE" style="font-weight: bold;"> ataqueE: </p>
                         <p id="vidaP" style="font-weight: bold;"> VidaP: </p>
